# TCC

./: .gitignore  CMakeLists.txt  README.md
cmake/: Dependencies.cmake
include/: a_star_mod.hpp  graph_gen.hpp  statistics.hpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  tests.cpp
typ/: pre-project.typ  referencias.bib  tcc.typ
